add readme for foreman